src/FinancialForce OneTouch/objects/OneTouchSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>OneTouch Settings (FF)</description>
    <fields>
        <fullName>CashMatchingReportName__c</fullName>
        <label>Cash Matching Report Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnablePayableCreditNoteApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Payable Credit Note Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnablePayableInvoiceApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Payable Invoice Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableSalesCreditNoteApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Sales Credit Note Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableSalesInvoiceApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Sales Invoice Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransactionEnquiryReportName__c</fullName>
        <label>Transaction Inquiry Report Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>OneTouch Settings (FF)</label>
</CustomObject>